--- a/OpenWorld/Settings.settings
+++ b/OpenWorld/Settings.settings
@@ -5,5 +5,14 @@
     <Setting Name="GameControlScale" Type="System.Double" Scope="Application">
       <Value Profile="(Default)">64</Value>
     </Setting>
+    <Setting Name="MobNewDuration" Type="System.TimeSpan" Scope="Application">
+      <Value Profile="(Default)">00:00:03</Value>
+    </Setting>
+    <Setting Name="MobDeadDuration" Type="System.TimeSpan" Scope="Application">
+      <Value Profile="(Default)">00:00:06</Value>
+    </Setting>
+    <Setting Name="MobReturnSpeedRatio" Type="System.Single" Scope="Application">
+      <Value Profile="(Default)">2</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
