--- a/OpenWorld.Models/OpenWorld.Models.csproj
+++ b/OpenWorld.Models/OpenWorld.Models.csproj
@@ -5,6 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\Libs\Primitives\Kalavarda.Primitives.Units\Kalavarda.Primitives.Units.csproj" />
     <ProjectReference Include="..\Libs\Primitives\Kalavarda.Primitives\Kalavarda.Primitives.csproj" />
   </ItemGroup>
 
