--- a/OpenWorld/Settings.settings
+++ b/OpenWorld/Settings.settings
@@ -17,5 +17,8 @@
     <Setting Name="HeroXpBase" Type="System.Int32" Scope="Application">
       <Value Profile="(Default)">100</Value>
     </Setting>
+    <Setting Name="HeroDeathDuration" Type="System.TimeSpan" Scope="Application">
+      <Value Profile="(Default)">00:00:05</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
