--- a/OpenWorld.Controls/OpenWorld.Controls.csproj
+++ b/OpenWorld.Controls/OpenWorld.Controls.csproj
@@ -8,6 +8,8 @@
   <ItemGroup>
     <None Remove="Images\Grass.jpg" />
     <None Remove="Images\Hero.png" />
+    <None Remove="Images\Items\Chitin.jpg" />
+    <None Remove="Images\Items\Sword.png" />
     <None Remove="Images\Spider.png" />
   </ItemGroup>
 
@@ -19,6 +21,8 @@
   <ItemGroup>
     <Resource Include="Images\Grass.jpg" />
     <Resource Include="Images\Hero.png" />
+    <Resource Include="Images\Items\Chitin.jpg" />
+    <Resource Include="Images\Items\Sword.png" />
     <Resource Include="Images\Spider.png" />
   </ItemGroup>
 
