--- a/OpenWorld.Controls/OpenWorld.Controls.csproj
+++ b/OpenWorld.Controls/OpenWorld.Controls.csproj
@@ -9,7 +9,7 @@
     <None Remove="Images\Grass.jpg" />
     <None Remove="Images\Hero.png" />
     <None Remove="Images\Items\Alchemy\HpPotion.png" />
-    <None Remove="Images\Items\Chitin.jpg" />
+    <None Remove="Images\Items\SpiderLegs.png" />
     <None Remove="Images\Items\Sword.png" />
     <None Remove="Images\Spider.png" />
   </ItemGroup>
@@ -23,7 +23,7 @@
     <Resource Include="Images\Grass.jpg" />
     <Resource Include="Images\Hero.png" />
     <Resource Include="Images\Items\Alchemy\HpPotion.png" />
-    <Resource Include="Images\Items\Chitin.jpg" />
+    <Resource Include="Images\Items\SpiderLegs.png" />
     <Resource Include="Images\Items\Sword.png" />
     <Resource Include="Images\Spider.png" />
   </ItemGroup>
