--- a/OpenWorld/OpenWorld.csproj
+++ b/OpenWorld/OpenWorld.csproj
@@ -7,16 +7,31 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="Resources\Bite.mp3" />
-    <None Remove="Resources\Hero\SimpleStrike.mp3" />
-    <None Remove="Resources\Map\Grass.jpg" />
+    <Compile Remove="Resources\Spider\**" />
+    <EmbeddedResource Remove="Resources\Spider\**" />
+    <None Remove="Resources\Spider\**" />
+    <Page Remove="Resources\Spider\**" />
   </ItemGroup>
 
   <ItemGroup>
-    <Content Include="Resources\Spider\Bite.mp3">
+    <None Remove="Resources\Bite.mp3" />
+    <None Remove="Resources\Buffs\Healing.png" />
+    <None Remove="Resources\Grass.jpg" />
+    <None Remove="Resources\Hero\Hero.png" />
+    <None Remove="Resources\Hero\SimpleStrike.mp3" />
+    <None Remove="Resources\Items\Alchemy\HpPotion.png" />
+    <None Remove="Resources\Items\SpiderLegs.png" />
+    <None Remove="Resources\Items\Sword.png" />
+    <None Remove="Resources\Map\Grass.jpg" />
+    <None Remove="Resources\Mobs\Spider\Bite.mp3" />
+    <None Remove="Resources\Mobs\Spider\Spider.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Content Include="Resources\Hero\SimpleStrike.mp3">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
-    <Content Include="Resources\Hero\SimpleStrike.mp3">
+    <Content Include="Resources\Mobs\Spider\Bite.mp3">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
   </ItemGroup>
@@ -24,11 +39,26 @@
   <ItemGroup>
     <ProjectReference Include="..\Libs\Primitives\Kalavarda.Primitives.Units.WPF\Kalavarda.Primitives.Units.WPF.csproj" />
     <ProjectReference Include="..\Libs\Primitives\Kalavarda.Primitives.WPF\Kalavarda.Primitives.WPF.csproj" />
-    <ProjectReference Include="..\OpenWorld.Controls\OpenWorld.Controls.csproj" />
     <ProjectReference Include="..\OpenWorld.Models\OpenWorld.Models.csproj" />
   </ItemGroup>
 
   <ItemGroup>
+    <Resource Include="Resources\Buffs\Healing.png" />
+    <Resource Include="Resources\Grass.jpg" />
+    <Resource Include="Resources\Hero\Hero.png" />
+    <Resource Include="Resources\Items\Alchemy\HpPotion.png" />
+    <Resource Include="Resources\Items\SpiderLegs.png" />
+    <Resource Include="Resources\Items\Sword.png" />
+    <Resource Include="Resources\Mobs\Spider\Spider.png" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Compile Update="Controls\HeroControl.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
+    <Compile Update="Controls\MobControl.xaml.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Update="Settings.Designer.cs">
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
       <AutoGen>True</AutoGen>
@@ -41,6 +71,17 @@
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
     </None>
+  </ItemGroup>
+
+  <ItemGroup>
+    <Page Update="Controls\HeroControl.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Update="Controls\MobControl.xaml">
+      <XamlRuntime>$(DefaultXamlRuntime)</XamlRuntime>
+      <SubType>Designer</SubType>
+    </Page>
   </ItemGroup>
 
 </Project>
