--- a/OpenWorld.Models/OpenWorld.Models.csproj
+++ b/OpenWorld.Models/OpenWorld.Models.csproj
@@ -9,4 +9,8 @@
     <ProjectReference Include="..\Libs\Primitives\Kalavarda.Primitives\Kalavarda.Primitives.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Mobs\" />
+  </ItemGroup>
+
 </Project>
